<resources>
    <string name="app_name">ExpenseCalculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="consignment_no">Consignment no.</string>
    <string name="enter_type">Enter type</string>
    <string name="enter_main_type">Enter main type</string>
    <string name="enter_expense_name">Enter Expense title</string>
    <string name="enter_ledger_title">Enter Ledger title</string>
    <string name="enter_starting_balance">Enter starting balance</string>
    <string name="enter_expense_value">Enter Expense value e.g.1000</string>
    <string name="enter_sub_type">Enter sub type</string>
    <string name="save">SAVE</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="image">image</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="add_more">Add more</string>
    <string name="sum">Rs.%1$s</string>
    <string name="finish">finish</string>
    <string name="done">Done</string>
    <string name="add_type">Add type</string>
    <string name="add_sub_type">Add sub type</string>
    <string name="type">Type</string>
    <string name="configure_drawer">Configure Drawer</string>
    <string name="edit_type_ledger"><![CDATA[Edit types & ledgers]]></string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_from_date">Choose from Date</string>
    <string name="choose_to_date">Choose to Date</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="main_type">Main type</string>
    <string name="sub_type">Sub type</string>
    <string name="add_image">Add image</string>
    <string name="error_message_type">Enter valid type</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item description</string>
    <string name="item_price">Item price</string>
    <string name="item_quantity">Item quantity</string>
    <string name="item_age">Age</string>
    <string name="item_image">Item image</string>
    <string name="add_camera_image">Add camera image</string>
    <string name="add_gallery_image">Add gallery image</string>
    <string name="remove_image">Remove image</string>
    <string name="item_location">Item location</string>
    <string name="item_main_type">Main type</string>
    <string name="item_sub_type">Sub type</string>

    <string-array name="elements_friends">
        <item>Suhail</item>
        <item>Ekram</item>
        <item>Misfa</item>
        <item>Naushad</item>
        <item>Nihal</item>
    </string-array>

    <string-array name="item_location">
        <item>Shop</item>
        <item>Store</item>
    </string-array>

    <string-array name="item_sub_type">
        <item>jeans</item>
        <item>shirts</item>
    </string-array>

    <string-array name="item_main_type">
        <item>Baby</item>
        <item>Baba</item>
        <item>Men</item>
        <item>Women</item>
        <item>others</item>
    </string-array>

    <string-array name="add_image_dialog_items">
        <item>Take photo</item>
        <item>Choose image</item>
    </string-array>

    <string-array name="elements_home">
        <item>Suhail</item>
        <item>Ekram</item>
        <item>Misfa</item>
        <item>Nuashad</item>
        <item>Nihal</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>
        <item>zeeshan</item>

    </string-array>

    <string-array name="elements_notifs">
        <item>Yellow</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Pink!</item>
    </string-array>

    <string-array name="parent_icon">
        <item>baby</item>
        <item>baba</item>
        <item>men</item>
        <item>women</item>
        <item>others</item>
    </string-array>

    <string-array name="parent_item_labels">
        <item>@string/baby</item>
        <item>@string/baba</item>
        <item>@string/men</item>
        <item>@string/women</item>
        <item>@string/others</item>
    </string-array>

    <string name="baby">Baby</string>
    <string name="baba">Baba</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="others">others</string>

    <string name="category">Category</string>
    <string name="parent_icon">parent_icon</string>
    <string name="title_activity_items">Items</string>
    <string name="title_activity_add_new">Add new</string>

    <string-array name="add_new_choose_dialog">
        <item>Add consignment</item>
        <item>Add item</item>
    </string-array>
    <string name="title_activity_add_new_item">Add new item</string>
    <string name="title_activity_add_new_type">Add new type</string>
    <string name="title_activity_add_new_consignment">Add new consignment</string>
    <string name="title_activity_configure_drawer">Edit</string>
    <string name="title_activity_view_items">ViewItems</string>

    <string-array name="add_new_expense">
        <item>Add new expense</item>
    </string-array>
    <string name="title_activity_add_expense">AddExpense</string>
    <string name="title_activity_add__ledger">Add_Ledger</string>
    <string name="title_activity_filter">Filter</string>
    <string name="apply">APPLY</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="total_expense_100">Total Expense: 100</string>
    <string name="dummy_value">1452124</string>
    <string name="date">Date</string>
    <string name="add_ledger">Add Ledger</string>
    <string name="date_sample">28/7/2016</string>
    <string name="add_new">Add new</string>
    <string name="save_amp_add_more"><![CDATA[SAVE & ADD MORE]]></string>
    <string name="enter_name">Enter name</string>
    <string name="enter_value">Enter value</string>
    <string name="note">Note</string>
    <string name="expense">Expense</string>
    <string name="value">Rs.0</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="remaining">Remaining</string>
    <string name="total">Total</string>
    <string name="ledger">Ledger</string>
</resources>
