<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/five_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_ledger_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title_ledger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_ledger_title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_starting_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/starting_balance_ledger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_starting_balance"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/from_date_ledger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_date"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_from_date_ledger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/from_date_edit_text_ledger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_date"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/to_date_ledger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_to_date"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_to_date_ledger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/to_date_edit_text_ledger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_date"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_ledger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>