<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_add_expense"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/five_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_add_expense_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_add_expense_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/value_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_value"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/date_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_sample"
        android:gravity="center"
        android:drawableRight="@android:drawable/ic_menu_my_calendar"
        android:drawableEnd="@android:drawable/ic_menu_my_calendar"
        android:drawablePadding="@dimen/_8sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_spinner">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ledger"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ledger_expense_spinner">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/save_add_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


</LinearLayout>
